--- a/tests/data/overc-server/server.ini
+++ b/tests/data/overc-server/server.ini
@@ -9,3 +9,7 @@ database=mysql://overc:overc@127.0.0.1/overc
 # Alerts configuration
 [alert:test]
 command=./alert.d/log.sh /tmp/overc.log
+
+# Email configuration
+[alert:email]
+command=/usr/bin/mail -s "Alert status changed" support@dignio.com
